fix layout on mobile for contact..

--- a/themes/techblog/assets/css/less/elements/pages.less
+++ b/themes/techblog/assets/css/less/elements/pages.less
@@ -80,7 +80,12 @@
         }
 
         .legalNote {
-            .textCenter;
+
+            @media screen and (min-width: @screenTabletPortrait) {
+
+                .textCenter;
+
+            }
 
             strong {
                 .block;
